  . ext/filepro (Derick, Tony)
  . ext/hwapi (Derick, Tony)

- Improved SNMP extension: (Jani)
  . Renamed snmp_set_oid_numeric_print() to snmp_set_oid_output_format().
  . Added 2 new constants: SNMP_OID_OUTPUT_FULL and SNMP_OID_OUTPUT_NUMERIC
  . Fixed bug #37564 (AES privacy encryption not possible due to net-snmp 5.2
    compatibility issue). (Patch: scott dot moynes+php at gmail dot com)

- Fixed bug #38220 (Crash on some object operations). (Dmitry)
- Fixed bug #38217 (ReflectionClass::newInstanceArgs() tries to allocate too 
  much memory). (Tony)
- Fixed bug #38214 (gif interlace output cannot work). (Pierre)
- Fixed bug #38212 (Segfault on invalid imagecreatefromgd2part() parameters).
  (Pierre)
- Fixed bug #38211 (variable name and cookie name match breaks script
  execution). (Dmitry)
- Fixed bug #38194 (ReflectionClass::isSubclassOf() returns TRUE for the class
  itself). (Ilia)
- Fixed bug #38132 (ReflectionClass::getStaticProperties() retains \0 in key
  names). (Ilia)
- Fixed bug #38047 ("file" and "line" sometimes not set in backtrace from
  inside error handler). (Dmitry)
- Fixed bug #37564 (AES privacy encryption not possible due to net-snmp 5.2
  compatibility issue). (Jani, patch by scott dot moynes+php at gmail dot com)

24 Jul 2006, PHP 5.2.0RC1
- Updated bundled MySQL client library to version 5.0.22 in the Windows
  distribution. (Edin)
- Updated timezonedb to version 2006.7. (Derick)

- Changed priority of PHPRC environment variable on win32 to be higher then
  value from registry. (Dmitry)
- Changed __toString() to be called wherever applicable. (Marcus)
- Changed E_ALL error reporting mode to include E_RECOVERABLE_ERROR. (Marcus)
- Changed realpath cache to be disabled when "open_basedir" or "safe_mode"
  are enabled on per-request basis. (Ilia)

- Improved the Zend memory manager: (Dmitry)
  . Removed unnecessary "--disable-zend-memory-manager" configure option.
  . Added "--enable-malloc-mm" configure option which is enabled by default